--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
  <link rel="stylesheet" href="./lightbox/css/lightbox.css">
-  <link rel="stylesheet" href="./sass.css">
+  <link rel="stylesheet" href="./dist/css/sass.css">
 </head>
 <body>
    <div id="home-bg">
