--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <div class="container">
          <div class="navbar">
                <div class="navbar__title">
-                 <img src="/images/logo2.png" alt="image" class="navbar__img">
+                 <img src="images/logo2.png" alt="image" class="navbar__img">
                  <span class="navbar__text">bike tech limited</span>
                </div>
                <ul class="navbar__list">
